moved inline javascript

--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,6 @@
 <head>
 	<link href="css/jquery-ui.custom.css" rel="stylesheet" type="text/css"> 
-	<link href="css/beProductive.css" rel="stylesheet" type="text/css"> 
+	<link href="css/beProductive.css" rel="stylesheet" type="text/css">
 
 	<script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
 	<script type="text/javascript" src="js/jquery-ui.custom.min.js"></script>
@@ -10,13 +10,7 @@
 	<script type="text/javascript" src="js/options.js"></script>
 	<script type="text/javascript" src="js/popup.js"></script>
 
-	<script type="text/javascript">
-
-		$(document).ready(function() {
-			fillFieldsInPopup();
-		});
-            
-	</script>
+	<script type="text/javascript" src="js/popuppopulate.js"></script>
 
 </head>
 
