--- a/options.html
+++ b/options.html
@@ -3,9 +3,9 @@
 		<title>Chrome Nanny : Options </title>
 		<link href="css/jquery-ui.custom.css" rel="stylesheet" type="text/css"> 
 		<link href="css/jquery.jqplot.css" rel="stylesheet" type="text/css"> 
-		<link href="css/beProductive.css" rel="stylesheet" type="text/css"> 
+		<link href="css/beProductive.css" rel="stylesheet" type="text/css">
 
-		<script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
+		<script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
 		<script type="text/javascript" src="js/jquery-ui.custom.min.js"></script>
 
 		<script type="text/javascript" src="js/jquery.jqplot.min.js"></script>
@@ -18,22 +18,7 @@
 		<script type="text/javascript" src="js/statCharts.js"></script>
 		<script type="text/javascript" src="js/options.js"></script>
 
-		<script type="text/javascript">
-			var isIntervalSet = false;
-			var optionIntervalTimerId = "";
-			$(function() {
-				//done to get stats that are updated until NOW !
-				chrome.extension.getBackgroundPage().BackGroundManager.storeStats();
-				$("#tabs").tabs();
-				populateBlockSets();
-				populateWhiteListedUrls();
-				populateTags();
-				populateGenOptions();
-				populateLockDown();
-				setupDatePickers();
-				setupAllDialogs();
-			});
-		</script>
+		<script type="text/javascript" src="js/optionssetup.js"></script>
 	</head>
 
 	<body>
@@ -392,8 +377,6 @@
 					<tr>
 						<td width='20%'>http://www.google.*/reader</td>
 						<td>
-							<b>Note :</b> Chrome Nanny internally strips http,https and www. So this regexp is equivalent to <i><b>google.*/reader </b></i>
-							<br/>
 							Matches http://www.google.com/reader/view
 							<br/>
 							Does not match google.com, google.co.in, picasaweb.google.com, reader.google.com
@@ -494,7 +477,8 @@ This can be done using regexp. In the block url , enter .*.org as the url. Enter
 
 <b>5. Is http, https, www needed in the blocked URL ?</b><br/>
 
-No. They are really not needed and Chrome Nanny internally strips them when doing the matching. So facebook.com will block facebook and there is no need to enter the full URL as http://www.facebook.com . <p/>
+No. They are really not needed as Chrome Nanny uses substring match. Hence facebook.com will match http://www.facebook.com. But if you do enter them, it will be used in matching. So if the regular expression is http://example.com and the url is http://www.example.com , it will not match due to presence of www. So be extra careful when entering http/https/www .
+<p/>
 
 <b>6. Chrome Nanny Crashed my Chrome</b> <br/>
 
@@ -543,8 +527,6 @@ Matches google.com , google.co.in, google.com/reader , picasaweb.google.com  <br
 Does not match any URL that does not have the word google in it. <p/>
 
 b)  <b>http://www.google.*/reader</b> <br/>
-<b>Note :</b> Chrome Nanny internally strips http,https and www. So this regexp is equivalent to <b>google.*/reader </b>
-<br/>
 Matches http://www.google.com/reader/view
 <br/>
 Does not match google.com, google.co.in, picasaweb.google.com, reader.google.com
