added first click handlers

--- a/options.html
+++ b/options.html
@@ -17,8 +17,9 @@
 		<script type="text/javascript" src="js/StorageManager.js"></script>
 		<script type="text/javascript" src="js/statCharts.js"></script>
 		<script type="text/javascript" src="js/options.js"></script>
-
 		<script type="text/javascript" src="js/optionssetup.js"></script>
+
+		
 	</head>
 
 	<body>
@@ -122,7 +123,7 @@
 							</td>
 							<td>
 								<select class='GeneralSelectBox' id='blockListAllTags'></select>
-								<input type='button' class='GeneralButton' id='addTagToBlockList' onclick='javascript:addTagToBlockListDiv();' value = 'Add Tag' />
+								<input type='button' class='GeneralButton' id='addTagToBlockList' value = 'Add Tag' />
 								<ul id='blockListTagsUl'></ul>
 							</td>
 						</tr>
@@ -135,7 +136,7 @@
 							</td>
 						</tr>
 					</table>
-					<input type="button" class='GeneralButton' id="addToBlockList" name="addToBlockList" onclick ="javascript:addBlockSet();" value="Save URL"/>
+					<input type="button" class='GeneralButton' id="addToBlockList" name="addToBlockList" value="Save URL"/>
 					<input type='button' class='GeneralButton' id='clearBlockListTags' onclick="javascript:clearBlockListUrlTags();" value="Clear Tags" />
 					<input type='button' class='GeneralButton' id='clearBlockList' onclick="javascript:clearBlockListBlock();" value="Clear All Fields" />
 				</div>
