onclick ripper mostly working

--- a/options.html
+++ b/options.html
@@ -137,8 +137,8 @@
 						</tr>
 					</table>
 					<input type="button" class='GeneralButton' id="addToBlockList" name="addToBlockList" value="Save URL"/>
-					<input type='button' class='GeneralButton' id='clearBlockListTags' onclick="javascript:clearBlockListUrlTags();" value="Clear Tags" />
-					<input type='button' class='GeneralButton' id='clearBlockList' onclick="javascript:clearBlockListBlock();" value="Clear All Fields" />
+					<input type='button' class='GeneralButton' id='clearBlockListTags' value="Clear Tags" />
+					<input type='button' class='GeneralButton' id='clearBlockList' value="Clear All Fields" />
 				</div>
 				<p/>
 				<p/>
@@ -165,7 +165,7 @@
 							<td>
 								<input type = "textbox" id="whiteListedURL" size="75" maxLength = "100" />
 								<select class='GeneralSelectBox' id='whiteListAllTags'></select>
-								<input type='button' class='GeneralButton' id='addTagToWhiteList' onclick='javascript:addTagToWhiteListDiv();' value = 'Add Tag' />
+								<input type='button' class='GeneralButton' id='addTagToWhiteList' value = 'Add Tag' />
 							</td>
 						</tr>
 						<tr class='tDataGridElement'>
@@ -177,8 +177,8 @@
 							</td>
 						</tr>
 					</table>
-					<input type='button' class='GeneralButton' id='addToWhiteList' onclick="javascript:addUrlToWhiteList();" value="Save URL" />
-					<input type='button' class='GeneralButton' id='clearWhiteListTags' onclick="javascript:clearWhiteListUrlTags();" value="Clear Tags" />
+					<input type='button' class='GeneralButton' id='addToWhiteList' value="Save URL" />
+					<input type='button' class='GeneralButton' id='clearWhiteListTags' value="Clear Tags" />
 					<input type='button' class='GeneralButton' id='clearWhiteList' onclick="javascript:clearWhiteListBlock();" value="Clear All Fields" />
 				</div>
 				<p/>
