--- a/options.html
+++ b/options.html
@@ -1,13 +1,12 @@
 <html>
 	<head>
 		<title>Chrome Nanny : Options </title>
-		<link href="css/jquery-ui.custom.css" rel="stylesheet" type="text/css"> 
+		<link href="css/jquery-ui.min.css" rel="stylesheet" type="text/css"> 
 		<link href="css/jquery.jqplot.css" rel="stylesheet" type="text/css"> 
 		<link href="css/beProductive.css" rel="stylesheet" type="text/css">
 
 		<script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
-		<script type="text/javascript" src="js/jquery-ui.custom.min.js"></script>
-		<script type="text/javascript" src="js/jquery-migrate-1.2.1.js"></script>
+		<script type="text/javascript" src="js/jquery-ui.min.js"></script>
 
 		<script type="text/javascript" src="js/jquery.jqplot.min.js"></script>
 		<script type="text/javascript" src="js/jqplot.barRenderer.min.js"></script>
